# sdl-grassland

./: .clang-format  CMakeLists.txt  README.md  package-lock.json  package.json
assets/: World.tmx  World.tsx
assets/Tiled/: World.tmx
cmake/: FindSDL2_image.cmake
src/: entity.cpp  entity.hpp  game.cpp  game.hpp  grid.cpp  grid.hpp  input.cpp  input.hpp  main.cpp  math.cpp  math.hpp  player.cpp  player.hpp  sprite.cpp  sprite.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp  util.hpp  world.cpp  world.hpp
tilemaps/: foreground.csv  obstacles.csv
tools/: distribute.py  export-tilemaps.js  rename_tilemaps.py
